# vc4-test

./: CMakeLists.txt  main.c  vc4-code.c
platform/: vc4.h
platform/amiga/: devicetree.h  vc4.c
platform/dummy/: vc4.c
platform/rpi/: mailbox.c  mailbox.h  vc4.c
